# tinywav

./: CMakeLists.txt  README.md
include/: tinywav.h
sample/: twsample.cpp
